example .env file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Research
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:e+tihmfIG3OMiUA7DczbdSntMnJzrEwrE+VhnKOEJ48=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=research
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -23,12 +23,19 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_DRIVER=mailgun
+MAIL_HOST="smtp.mailgun.org"
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
+
+MAIL_FROM_ADDRESS="noreply@poll.local"
+MAIL_FROM_NAME="Poll"
+
+MAILGUN_DOMAIN=""
+MAILGUN_SECRET=""
+MAILGUN_ENDPOINT="api.mailgun.net"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
